added <p> tag to index.html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <html>
 <title>
 This is a sample website
@@ -5,5 +6,9 @@ This is a sample website
 <head>
 It's an awesome website
 </head>
+<p>
+life is beautiful,git is more
+</p>
 </html>
+
 
